# Cyphria

./: .gitignore  ARCHITECTURE.md  CICD_TROUBLESHOOTING.md  PROGRESS.md  README.md  default-project.yaml  package-lock.json  package.json  readme.md  tables.md  todo.md
backend/data_pipeline/ingestion/: dockerfile  pyproject.toml  ruff.toml  test_consumer.py
backend/data_pipeline/ingestion/src/: fastapi_entry_point.py  ingestion_service.py  main.py  worker.py
backend/data_pipeline/ingestion/tests/: conftest.py
backend/data_pipeline/llm_summary/: .dockerignore  dockerfile  pyproject.toml
backend/data_pipeline/llm_summary/src/: fastapi_entry_point.py  summary_service.py  worker.py
backend/data_pipeline/llm_summary/tests/: conftest.py
backend/data_pipeline/orchestrator/: pyproject.toml
backend/data_pipeline/orchestrator/tests/: conftest.py
backend/data_pipeline/ranking_calculator/: dockerfile  pyproject.toml
backend/data_pipeline/ranking_calculator/src/: fastapi_entry_point.py  ranking_service.py  worker.py
backend/data_pipeline/ranking_calculator/tests/: conftest.py
backend/data_pipeline/sentiment_analysis/: dockerfile  pyproject.toml
backend/data_pipeline/sentiment_analysis/src/: fastapi_entry_point.py  sentiment_service.py  worker.py
backend/data_pipeline/sentiment_analysis/tests/: conftest.py
backend/data_pipeline/topic_classification/: pyproject.toml
backend/data_processing/category_classification/: pyproject.toml
backend/data_processing/category_classification/src/: worker.py
backend/data_processing/data_ingestion/: pyproject.toml  test_consumer.py  worker.py
backend/data_processing/data_ingestion/src/: worker.py
backend/data_processing/post_embeddings/: pyproject.toml
backend/data_processing/post_embeddings/src/: worker.py
backend/data_processing/sentiment_analysis/: pyproject.toml
backend/data_processing/sentiment_analysis/src/: worker.py
backend/insights_api/: dockerfile  pyproject.toml
backend/insights_api/src/: main.py
backend/insights_api/src/core/: lifespan.py  logger.py  settings.py
backend/insights_api/src/db_utils/: cache_commands.py  cache_conn.py  category_queries.py  conn.py  pg_conn.py  product_queries.py  queries.py  retry.py  topic_queries.py
backend/insights_api/src/middleware/: get_client_ip.py  metrics.py  topic_category_mapping.py
backend/insights_api/src/routes/: category.py  home.py  products.py  topic.py
backend/insights_api/src/schemas/: comment.py  home.py  product.py  queries.py  request.py  response.py
backend/insights_api/tests/: conftest.py
backend/insights_api/tests/fixtures/: database.py  fastapi.py
backend/insights_api/tests/integration/: conftest.py  test_get_product_by_name_endpoint.py  test_get_ranked_products_list.py  test_get_sentiment_scores_endpoint.py  test_get_top_comments_endpoint.py  test_get_top_mentioned_products_endpoint.py  test_get_top_mentioned_products_for_topic_endpoint.py  test_get_total_comments_endpoint.py  test_get_total_products_count_endpoint.py  test_get_total_products_ranked_endpoint.py  test_product_api_endpoints.py  test_product_by_name_endpoint.py  test_product_top_comments_endpoint.py  test_ranked_products_for_category_endpoint.py  test_view_more_products_metadata_endpoint.py
backend/insights_api/tests/types/: fastapi.py
backend/insights_api/tests/unit/: test_get_category_for_topic.py  test_get_client_ip.py  test_get_product_by_name_endpoint.py  test_get_ranked_products_list_endpoint.py  test_get_sentiment_scores_endpoint.py  test_get_top_comments_endpoint.py  test_get_top_mentioned_product_endpoint.py  test_get_top_mentioned_products_for_topic_endpoint.py  test_get_topics_for_category.py  test_get_total_comments_endpoint.py  test_get_total_products_count_endpoint.py  test_get_total_products_ranked.py  (+1 more)
backend/shared/: pyproject.toml
backend/shared/data_pipeline_utils/: job_state_manager.py  run_single_cycle.py
backend/shared/pipeline_types/: data_pipeline.py
backend/shared/shared_core/: logger.py
backend/shared/shared_db/: conn.py  health_check.py  retry.py
backend/shared/shared_dp_utils/: should_continue_processing.py
data_processing_pipeline/category_classification_service/: get-Reddit-Posts.py  get_reddit_posts.py  pyproject.toml
data_processing_pipeline/category_classification_service/components/: export_csv.py  preprocessing.py  process_data.py  reddit_authentication.py
data_processing_pipeline/category_classification_service/datasets/: 1k_dataset.csv  2k_dataset.csv  4k_dataset.csv  6k_dataset.csv  drug_names.txt  featureEng.csv  programming_tools.txt  reddit-posts.csv  reddit-posts2.csv  reddit-posts3.csv  reddit-posts4.csv  reddit_posts.csv  stock_names.txt  tvshow1.csv  vehicle1.csv  vehicle_brands.txt
data_processing_pipeline/category_classification_service/lexicon_datasets/: art.txt  collection_terms.txt  gardening.txt  housing.txt  job_terms.txt  law_terms.txt  relationship_terms.txt  science_terms.txt
data_processing_pipeline/category_classification_service/model/: generate_vocab_list.py  nbayes_training.py  training2.py  training3.py  xgboost_training.py
data_processing_pipeline/category_classification_service/preprocessing/: export_csv.py  language_filter.py  lexicon_substitution.py  remove_noise.py  substitute_age.py  substitute_gpu.py  substitute_money.py  substitute_prog_tools.py  substitute_stock.py  substitute_vehicle.py
data_processing_pipeline/category_classification_service/preprocessing_files/: remove_noise.py
data_processing_pipeline/category_classification_service/training_data/: animals.csv  anime.csv  art.csv  books.csv  business.csv  collecting.csv  collection.csv  comics.csv  education.csv  fashion.csv  finance.csv  food.csv  gaming.csv  gardening.csv  government.csv  health.csv  history.csv  housing.csv  investments.csv  jobs.csv  law.csv  literature.csv  money.csv  movies.csv  music.csv  nature.csv  news.csv  photography.csv  podcasts.csv  politics.csv  programming.csv  relationships.csv  religion.csv  science.csv  social.csv  sports.csv  technology.csv  travel.csv  tv_shows.csv  vehicle.csv  (+1 more)
(+1257 files in other folders)
