[project]
name = "shared"
version = "0.1.0"
description = "Shared code between all my backend services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg>=3.3.3",
    "psycopg-pool>=3.3.0",
]
[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["shared_db*", "shared_core*", "shared_api*"]