[project]
name = "shared"
version = "0.1.0"
description = "Shared code between all my backend services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "psycopg-pool>=3.3.0",
]
[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["shared_db*", "shared_core*", "shared_api*", "pipeline_types*", "data_pipeline_utils*"]

[dependency-groups]
dev = [
    "fastapi>=0.133.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "testcontainers[postgres]>=4.14.1",
]
