[project]
name = "llm-summary"
version = "1.0.0"
description = "llm summary service that uses a llm to summarize a product with top comments (~25)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "openai>=2.15.0",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pytest-asyncio>=1.3.0",
    "testcontainers[postgres]>=4.14.0",
    "shared"
]

[tool.pyrefly]
python-version = "3.13"
untyped-def-behavior = "check-and-infer-return-any"
search-path = [".", "../../shared"] # summary root + shared package
venv = ".venv"

[tool.pyrefly.errors]
unannotated-parameter = "error"
unannotated-return = "error"
unannotated-attribute = "error"
implicit-any = "error"

[tool.uv.sources]
shared = { path = "../../shared", editable = true }

[dependency-groups]
dev = [
    "pyrefly>=0.49.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
