[project]
name = "scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.5",
    "apache-airflow-providers-http>=5.6.2",
    "pydantic-settings>=2.12.0",
]

[tool.pyrefly]
python-version = "3.13"
untyped-def-behavior = "check-and-infer-return-any"
search-path = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "testcontainers[k3s]>=4.14.0",
]
