[project]
name = "ranking-calculator"
version = "0.1.0"
description = "Python worker service that aggregates sentiment data from product sentiment table and calculate the ranking score for each product and compute rankings and write to product_rankings table"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "psycopg[binary]>=3.3.2",
    "psycopg-pool>=3.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "scipy>=1.17.0",
    "fastapi[standard]>=0.128.0",
    "shared"
]

[tool.pyrefly]
python-version = "3.13"
untyped-def-behavior = "check-and-infer-return-any"
search-path = [".", "../../shared"] # summary root + shared package
venv = ".venv"

[tool.pyrefly.errors]
unannotated-parameter = "error"
unannotated-return = "error"
unannotated-attribute = "error"
implicit-any = "error"

[tool.uv.sources]
shared = { path = "../../shared", editable = true }

[dependency-groups]
dev = [
    "pyrefly>=0.48.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.11",
    "testcontainers[postgres]>=4.14.0",
]
