[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers>=4.57.0",
    "torch==2.5.1+cu124",
    "protobuf>=6.32.1",
    "tiktoken>=0.12.0",
    "sentencepiece>=0.2.1",
    "psycopg[binary]>=3.3.2",
    "psycopg-pool>=3.3.0",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.5",
    "fastapi[standard]>=0.128.0",
    "shared"
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
shared = { path = "../../shared", editable = true }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pyrefly]
python-version = "3.13"
untyped-def-behavior = "check-and-infer-return-any"
search-path = [".", "../../shared"] # sentiment analysis root + shared package
venv = ".venv"

[tool.pyrefly.errors]
unannotated-parameter = "error"
unannotated-return = "error"
unannotated-attribute = "error"
implicit-any = "error"

[dependency-groups]
dev = [
    "pyrefly>=0.47.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.11",
    "testcontainers[postgres]>=4.14.0",
]
