[project]
name = "category-classification-service"
version = "0.1.0"
description = "Python Service to Classify text into categories"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "confluent-kafka>=2.12.0",
    "dotenv>=0.9.9",
    "langdetect>=1.0.9",
    "mypy>=1.18.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "praw>=7.8.1",
    "prawcore>=2.4.0",
    "preprocessing>=0.1.13",
    "ruff>=0.14.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.0",
    "xgboost>=3.0.5",
]


[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true
