[project]
name = "data-ingestion"
version = "0.1.0"
description = "Worker Service in charge of taking in data from reddit api and sending messages to kafka"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.11.1",
    "dotenv>=0.9.9",
    "langdetect>=1.0.9",
    "mypy>=1.18.2",
    "praw>=7.8.1",
    "pydantic>=2.11.10",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "testcontainers[kafka]>=4.13.2",
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true

