[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.11.1",
    "faust-streaming[rocksdict]>=0.11.3",
    "transformers>=4.57.0",
    "torch==2.5.1+cu124",
    "protobuf>=6.32.1",
    "tiktoken>=0.12.0",
    "sentencepiece>=0.2.1",
    "mypy>=1.18.2",
    "ruff>=0.14.0",
    "pytest>=8.4.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true
